fixed spacing and disco ball

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
 
 h1 {
   margin-top: 0px;
+  margin-left: -10px;
   padding-top: 10px;
   padding-bottom: 100px;
   font-family: 'LovadelicRegular', cursive;
@@ -112,7 +113,7 @@ a {
   height: 100px;
   top: 50px;
   left: 50%;
-  margin-left: -50px;
+  margin-left: -35px;
   -webkit-animation: rotateDiscoBall 18s linear infinite;
   animation: rotateDiscoBall 18s linear infinite;
 }
